jilles      2007/03/04 00:39:56 UTC	(20070304-7791)
  Log:
  nickserv freeze: log out all sessions and set MU_NOBURSTLOGIN
  

  Changes:	Modified:
  +15 -1	trunk/modules/nickserv/freeze.c (File Modified) 


jilles      2007/03/04 00:00:48 UTC	(20070304-7789)
  Log:
  Add MU_NOBURSTLOGIN, marks accounts that have never had
  a user split (or online while services quits).
  Refuse bursted logins for accounts with this flag.
  Logout all sessions from the account on /ns return and
  also set MU_NOBURSTLOGIN.
  
  This cuts down on split hacking with dropped/recreated
  accounts but does not completely prevent it.
  

  Changes:	Modified:
  +1 -1		trunk/contrib/ns_fregister.c (File Modified) 
  +1 -0		trunk/include/account.h (File Modified) 
  +4 -1		trunk/modules/backend/flatfile.c (File Modified) 
  +1 -1		trunk/modules/nickserv/register.c (File Modified) 
  +14 -0	trunk/modules/nickserv/return.c (File Modified) 
  +1 -1		trunk/modules/xmlrpc/account.c (File Modified) 
  +5 -0		trunk/src/servers.c (File Modified) 
  +10 -0	trunk/src/services.c (File Modified) 


jilles      2007/03/03 22:17:40 UTC	(20070303-7787)
  Log:
  Some obvious simplifications.
  

  Changes:	Modified:
  +6 -31	trunk/modules/backend/flatfile.c (File Modified) 


pippijn     2007/03/03 15:54:32 UTC	(20070303-7785)
  Log:
  - added autogen.sh to setup
  - added missing vimopts to contrib
  

  Changes:	Modified:
  +2 -0		trunk/contrib/anope_convert.c (File Modified) 
  +2 -0		trunk/contrib/cs_kickdots.c (File Modified) 
  +2 -0		trunk/contrib/cs_ping.c (File Modified) 
  +2 -0		trunk/contrib/cs_sync.c (File Modified) 
  +2 -0		trunk/contrib/gen_echoserver.c (File Modified) 
  +2 -0		trunk/contrib/gen_httpd.c (File Modified) 
  +2 -0		trunk/contrib/gen_listenerdemo.c (File Modified) 
  +2 -0		trunk/contrib/gen_regcheckemail.c (File Modified) 
  +2 -0		trunk/contrib/gen_vhostonreg.c (File Modified) 
  +2 -0		trunk/contrib/ircd_catserv.c (File Modified) 