@@ -5,7 +5,7 @@
  *
  * Items marked with "(*)" are reconfigurable at runtime via REHASH.
  *
- * $Id: example.conf 7753 2007-02-26 15:28:07Z jilles $
+ * $Id: example.conf 7795 2007-03-04 15:54:18Z jilles $
  */
 
 /* Protocol module.
@@ -924,6 +924,7 @@ operclass "sra" {
 	privs = {
 		user:auspex;
 		user:admin;
+		user:sendpass;
 		user:vhost;
 		user:mark;
 		user:hold;
@@ -975,6 +976,7 @@ operclass "ircop" {
 	privs = {
 		user:auspex;
 		user:admin;
+		user:sendpass;
 		user:vhost;
 		user:mark;
 	};
