@@ -57,6 +57,8 @@ user:auspex
 	os rnc/rmatch/rwatch
 user:admin
 	administer users
+user:sendpass
+	send user passwords to their email addresses
 user:vhost
 	set vhosts
 user:fregister
@@ -114,4 +116,4 @@ operserv:global
 operserv:grant
 	use /os soper add/del
 
-$Id: PRIVILEGES 7627 2007-02-10 20:43:51Z jilles $
+$Id: PRIVILEGES 7795 2007-03-04 15:54:18Z jilles $
